[gd_scene load_steps=12 format=3 uid="uid://bnbb23cmn1snm"]

[ext_resource type="Script" uid="uid://denn8pkl438tf" path="res://props/Resources/enemy.gd" id="1_am758"]
[ext_resource type="PackedScene" uid="uid://cw311chx314x6" path="res://props/Enemy/enemy_bullet/enemy_bullet_apc.tscn" id="2_xwybj"]
[ext_resource type="Theme" uid="uid://c74svuj2mrlju" path="res://Player/ui/UI.tres" id="10_rj6of"]
[ext_resource type="Texture2D" uid="uid://brplfrqlt75hs" path="res://textures/Barrel_Explosion.png" id="11_j1wwd"]
[ext_resource type="AudioStream" uid="uid://8wts83pen12l" path="res://props/audio/explosion.wav" id="12_7qjt6"]
[ext_resource type="AudioStream" uid="uid://cj1teeq47irs1" path="res://props/audio/Machine_Gun_Fire.wav" id="13_alfd5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ukgxs"]

[sub_resource type="Animation" id="Animation_vxyyq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jrt2c"]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.3, 0.46666667, 0.6333333, 0.76666665, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1osvg"]
_data = {
&"RESET": SubResource("Animation_vxyyq"),
&"explosion": SubResource("Animation_jrt2c")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7qjt6"]
radius = 32.911392

[node name="BaseEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_am758")
bullet = ExtResource("2_xwybj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(10.82722, 10.82722)
shape = SubResource("CircleShape2D_ukgxs")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -95.0
offset_top = -103.0
offset_right = 93.0
offset_bottom = -76.0
theme = ExtResource("10_rj6of")
theme_override_colors/font_color = Color(1, 0, 0, 1)
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1osvg")
}

[node name="explosion" type="Sprite2D" parent="."]
scale = Vector2(32.574787, 32.574787)
texture = ExtResource("11_j1wwd")
hframes = 7

[node name="Explosion_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_7qjt6")

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
scale = Vector2(31.600002, 31.600002)
shape = SubResource("CircleShape2D_7qjt6")

[node name="Fire_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_alfd5")

[node name="Player_direction" type="RayCast2D" parent="."]
target_position = Vector2(1024, 0)
collision_mask = 2

[node name="Bullet_Spawner" type="Marker2D" parent="Player_direction"]
gizmo_extents = 0.0

[node name="Fire_rate" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="Fire_rate" to="." method="_on_fire_rate_timeout"]
